--- a/Tpl/layout.html
+++ b/Tpl/layout.html
@@ -97,6 +97,9 @@
                     <li class="dropdown">
                         <a href="{:U("Album/albumlist")}" class="navbar-link" target="_blank">我的影集</a>
                     </li>
+                    <li class="dropdown">
+                        <a href="{:U("Album/create")}" class="navbar-link">创建影集</a>
+                    </li>
 
                     <!-- Work -->
                     <!-- <li id="navbar-link--work" class="dropdown">
