add waterfall show photo

--- a/Tpl/Album/edit.html
+++ b/Tpl/Album/edit.html
@@ -8,7 +8,7 @@
 		<div class="step-wrapper step-third"></div>
 	</div>
 	<div class="edit-toolbar">
-		<button class="btn btn-primary">继续添加照片</button>
+		<a class="btn btn-primary" href="{:U("Album/uploadphoto?albumId=$albumId")}">继续添加照片</a>
 		<a class="btn btn-primary" href="{:U("Photo/photolist?albumId=$albumId")}">下一步</a>
 	</div>
 	<div class="upload-container">
