--- a/Tpl/Photo/photolist.html
+++ b/Tpl/Photo/photolist.html
@@ -3,19 +3,16 @@
 <div class="container">
 	<div class="page-header">
 		<h2>{$album.name}</h2>
-		<div class="btn-group">
-			<button type="button" class="btn btn-default">添加照片</button>
-			<button type="button" class="btn btn-default">整理照片</button>
-			<button type="button" class="btn btn-info">发布</button>
+		<div class="btn-group pull-right">
+			<a type="button" class="btn btn-default" href="{:U("Album/uploadphoto?albumId=$albumId")}">添加照片</a>
+			<a type="button" class="btn btn-default" href="{:U("Album/edit?albumId=$albumId")}">整理照片</a>
+			<a type="button" class="btn btn-default" href="{:U("Album/public?albumId=$albumId")}">发布影集</a>
 		</div>
 	</div>
-	<div class="row">
-		
-	</div>
-	<div class="well">
-		<div class="row">
+	
+	<div class="well" id="masonry">
 			<foreach name="photos" item="photo">
-				<div class="col-xs-6 col-md-4">
+				<!-- <div class="col-xs-6 col-md-4"> -->
                     <div class="thumbnail">
                         <a href="{:U('Photo/view', 'albumId='.$albumId.'&pid='.$photo['id'])}">
                             <img data-src="holder.js/100%x180" src="{$photo.path}" alt="...">
@@ -36,10 +33,11 @@
                             </div>
                         </div>
                     </div>
-				</div>
+				<!-- </div> -->
 			</foreach>
-		</div>	
 	</div>
 </div>
 
+<load href='/Public/js/masonry.pkgd.js' />
+<load href='/Public/js/imagesloaded.pkgd.js' />
 <load href='/Public/js/photolist.js' />
