--- a/Tpl/layout.html
+++ b/Tpl/layout.html
@@ -61,7 +61,7 @@
                     <span class="icon-bar"></span>
                 </button>
 
-                <a href="https://laracasts.com/" class="navbar-brand logo">
+                <a href="#" class="navbar-brand logo">
                     抱石
                 </a>
             </div> <!-- navbar-header -->
