modify css scripts

--- a/Tpl/Album/albumlist.html
+++ b/Tpl/Album/albumlist.html
@@ -10,7 +10,7 @@
                     <img src="{$userinfo['head']}" class="img-circle" style="width:140px; height:140px;">
                 </if>
             </div>
-            <div class="col-lg-10">
+            <div class="col-lg-10 header-text">
                 <h2>{$userinfo['username']}</h2>
             </div>
         </div>
