--- a/Tpl/Album/uploadphoto.html
+++ b/Tpl/Album/uploadphoto.html
@@ -2,11 +2,7 @@
 <load href='/Public/uploadify/uploadify.css' />
 <load href='/Public/uploadify/jquery.uploadify.js' />
 
-        <script>
-            function deletePhoto(fileID){
-                alert('delete '+fileID);
-            };
-        </script>
+
 <div class="container">
 	<div class="public-head-steps">
 		<div class="step-wrapper step-first step-first-current"></div>
@@ -14,13 +10,10 @@
 		<div class="step-wrapper step-third"></div>
 	</div>
     <div class="upload-button-wrapper">
-        <input type="file" name="file_upload" id="file_upload" class="btn btn-default" />
+        <input type="file" name="file_upload" id="file_upload"/>
     </div>
     <div class="upload-container" id="upload-container-queue">
-        <div class="photo-block">
-            <!--<div class="cancel">-->
-                <!--<a href="javascript:$(\'#${instanceID}\').uploadify(\'cancel\', \'${fileID}\')">X</a>-->
-            <!--</div>-->
+        <!-- <div class="photo-block">
             <button type="button" class="close hidden">
                 <span aria-hidden="true" onclick="deletePhoto()">
                     &times;
@@ -29,11 +22,11 @@
             </button>
 
             <img src="/Public/img/photo.svg" class="img-rounded img-responsive" style="height: 110px; width: 110px;">
-        </div>
+        </div> -->
 
     </div>
     <div class="upload-button-wrapper">
-        <a class="btn btn-success btn-lg pull-right" href="{:U("Album/edit?albumId=$albumId")}" >下一步</a>
+        <a class="btn btn-success btn-lg pull-right" href="{:U("Album/edit?albumId=$albumId")}" >下一步<span class="glyphicon glyphicon-chevron-right"></span></a>
     </div>
 
     <!--<button class="btn btn-default" id="satrtUploadBtn" onclick="$('#file_upload').uploadify('upload', '*');">上传</button>-->
@@ -41,28 +34,47 @@
 
 <script>
 	(function($){
+
+        var photoCount = 20;
+
 		$('#file_upload').uploadify({
 			'auto': true,
 			'method': 'POST',
 			'buttonText': '点击上传照片',
+            'buttonClass': 'btn btn-success',
 			'removeCompleted': false,
             'queueSizeLimit' : 20,    //上传队列里最多有20张照片
             'uploadLimit' : 20,       //一共可以上传20张照片
             'queueID': 'upload-container-queue',
+            'fileExt': '*.jpg;*.gif,*.png',
 			'formData': {
 				'albumId': {$albumId}
 			},
 			'swf'      : '/Public/uploadify/uploadify.swf',
 			'uploader' : '__URL__/upload/',
+            // 'itemTemplate': '<div class="photo-block" id="${fileID}">\
+            //     <button type="button" class="close hidden">\
+            //         <span aria-hidden="true" onclick="javascript:$(\'#file_upload\').uploadify(\'cancel\', \'${fileID}\');">\
+            //             &times;\
+            //         </span>\
+            //         <span class="sr-only">Close</span>\
+            //     </button>\
+            //     <img src="/Public/img/photo.svg" pid="" class="img-rounded" style="height: 110px; width: 110px;">\
+            //     </div>',
             'itemTemplate': '<div class="photo-block" id="${fileID}">\
-                <button type="button" class="close hidden">\
-                    <span aria-hidden="true" onclick="deletePhoto(${fileID});">\
-                        &times;\
-                    </span>\
-                    <span class="sr-only">Close</span>\
-                </button>\
                 <img src="/Public/img/photo.svg" pid="" class="img-rounded" style="height: 110px; width: 110px;">\
                 </div>',
+            // 'onSelect': function(input){
+            //     // if (input.files && input.files[0]) {
+            //         // var reader = new FileReader();
+                    
+            //         // reader.onload = function (e) {
+            //         //     $('#blah').attr('src', e.target.result);
+            //         // }
+                    
+            //         // reader.readAsDataURL(input);
+            //     // }
+            // },
 			'onUploadSuccess' : function(file, data, response) {
                 if(response == true){
                     var fileId = file.id;
@@ -71,13 +83,10 @@
                     var photoPath = data.data.path;
                     $("#"+fileId).find('img').attr('src', photoPath);
                     $("#"+fileId).find('img').attr('pid', photoId);
+                    photoCount-=1;
+                    $("#photoNumber").text(photoCount);
                 }
-//                var html = '<div class="photo-block"><img src="'+data+'" class="img-rounded" style="height: 110px; width: 110px;"></div>';
-//	            $(".upload-container").append(html);
 	        },
-            'onCancel' : function (file) {
-                var a = '';
-            }
 		});
 
         $(document).on('mouseover','.photo-block' , function () {
