--- a/login.html
+++ b/login.html
@@ -1,41 +1,27 @@
-<!DOCTYPE html>
-<html lang="zh-cn">
-    <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <meta charset="UTF-8">
-        <title>Laracasts | Login</title>
-        <link href="https://laracasts.com/css/min.css?v=46" rel="stylesheet">
-    </head>
+<html>
+<head>
+<title>js图片上传预览</title>
+<script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+<script>
+function PreviewImage(input)
+{
+ if (input.files && input.files[0]) {
+        var reader = new FileReader();
 
-    <body class="form-only">
-        
-        <div id="form" class="login">
-            <h1 class="logo">抱石</h1>
+        reader.onload = function (e) {
+            $('#img1').attr('src', e.target.result);
+        }
 
-            
-            <form role="form" method="post" action="https://laracasts.com/sessions">
-                <div class="form-group">
-                    <label for="email" class="control-label">Email:</label>
-                    <input class="form-control" id="email" required="1" name="email" type="email">            
-                </div>
-
-                <div class="form-group">
-                    <label for="password" class="control-label">Password:</label>
-                    <input type="password" name="password" id="password" class="form-control" required="">
-                </div>
-
-                <div class="form-group text-left">
-                    <input type="checkbox" name="remember" id="remember"> <label for="remember">Remember Me</label>
-                </div>
-
-                <div class="form-group buttons">
-                    <button type="submit" class="btn btn-primary">
-                        Sign In
-                    </button>
-
-                    <a href="https://laracasts.com/password_resets/create" class="text-muted">Forgot Your Password?</a>
-                </div>
-            </form>
-        </div>
-    </body>
+        reader.readAsDataURL(input.files[0]);
+    }
+}
+</script>
+</head>
+<body>
+<input type="file" onchange='PreviewImage(this)' />
+<br />
+<div id="imgPreview" style='width:120px; height:100px;'>
+    <img id="img1" src="" width="120" height="100" />
+</div>
+</body>
 </html>
