modify css files

--- a/Tpl/Album/edit.html
+++ b/Tpl/Album/edit.html
@@ -87,7 +87,13 @@
 				</div>
 				<div class="modal-body">
 					<input type="text" class="form-control" id="inputTagName" placeholder="标签名称">
-				</div>
+                </div>
+                <div class="modal-body">
+                    <div class="alert alert-success" role="alert">
+                        <strong>提示：</strong>
+                        标签可以为地名、景点名称、照片风格等任何关键词，此关键词为您日后的搜索提供方便。
+                    </div>
+                </div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-default" id="createTagBtn">创建</button>
 				</div>
