--- a/Tpl/Album/create.html
+++ b/Tpl/Album/create.html
@@ -51,6 +51,8 @@
 	</form>
 </div>
 
+<p><h2>{$name}</h2></p>
+
 
 <load href='/Public/js/jquery.validate.js' />
 <load href='/Public/js/messages_zh.js' />
