--- a/Tpl/layout.html
+++ b/Tpl/layout.html
@@ -116,7 +116,7 @@
                             <li class=""><a href="../User/changePassword">修改密码</a></li>
                         </ul>
                     </li>
-                    <li class=""><a href="https://laracasts.com/login?return=https://laracasts.com/signup" class="navbar-link">退出</a></li>
+                    <li class=""><a href="{:U("User/logout")}" class="navbar-link">退出</a></li>
 
                 </ul>
             </div> <!-- collapse -->
