modify some thing

--- a/Tpl/Album/create.html
+++ b/Tpl/Album/create.html
@@ -8,9 +8,9 @@
 		<div class="form-group">
 			<div class="col-sm-4"></div>
 			<div class="col-sm-4">
-                <input type="text" class="form-control" id="albumName" name="albumName" placeholder="请输入名称" required maxlength="10">
+                <input type="text" class="form-control" id="albumName" name="albumName" placeholder="请输入名称" required maxlength="15">
                 <p class="word-count">
-                    <span id="j-words-count">10字</span>
+                    <span id="j-words-count">15字</span>
                    <!--  <span>/10</span> -->
                 </p>
             </div>
@@ -21,9 +21,9 @@
 		<div class="form-group">
             <div class="col-sm-5"></div>
 			<div class="col-sm-2">
-				<input type="text" class="form-control" id="albumTheme" name="albumTheme" placeholder="请输入主题" required maxlength="6">
+				<input type="text" class="form-control" id="albumTheme" name="albumTheme" placeholder="请输入主题" required maxlength="10">
                 <p class="word-count">
-                    <span id="j-words-count">6字</span>
+                    <span id="j-words-count">10字</span>
                    <!--  <span>/6</span> -->
                 </p>
 			</div>
@@ -51,7 +51,7 @@
 	</form>
 </div>
 
-<p><h2>{$Think.version}</h2></p>
+<!--<p><h2>{$Think.version}</h2></p>-->
 
 
 <load href='/Public/js/jquery.validate.js' />
