--- a/Tpl/Photo/view.html
+++ b/Tpl/Photo/view.html
@@ -30,7 +30,7 @@
             </volist>
         </p>
         <p>
-            <span class="glyphicon glyphicon-calendar"></span> {$photo.time}
+            <span class="glyphicon glyphicon-calendar"></span> {$photo.take_time}
         </p>
         <if condition="$photo.description neq null">
             <p class="bg-info bg-info-desc">
