--- a/Tpl/Photo/view.html
+++ b/Tpl/Photo/view.html
@@ -23,6 +23,7 @@
 	<div class="col-md-2">
 		<div class="page-header">
 			<h2>照片信息</h2>
+            <span>{$currentIndex}/{$totalSize}</span>
 		</div>
         <p>
             <volist name="photo.tags" id="tag">
