--- a/Tpl/Album/albumlist.html
+++ b/Tpl/Album/albumlist.html
@@ -28,16 +28,28 @@
         <div class="col-lg-12">
             <volist name="albums" id="album">
                 <div class="card-block">
-                    <a class="card-cover" href="{:U('Photo/photolist', 'albumId='.$album['id'])}" target="_blank">
-                        <if condition="($album['photos']|count) eq 0">
-                            <img width="310" height="207" style="" src="/Public/img/photo.svg" class="img-rounded">
-                        <else/>
-                            <img width="310" height="207" style="" src="{$album['photos'][0]['path']}" class="img-rounded">
-                        </if>
-                        <span class="view-count" title="浏览">5</span>
-                        <span class="reply-count" title="回复">0</span>
-                    </a>
+                    <!--album cover-->
+                    <if condition="$album['publish'] eq 1">
+                        <a class="card-cover" href="{:U('Album/show', 'albumId='.$album['id'])}" target="_blank">
+                            <if condition="($album['photos']|count) eq 0">
+                                <img width="310" height="207" style="" src="/Public/img/photo.svg" class="img-rounded">
+                                <else/>
+                                <img width="310" height="207" style="" src="{$album['photos'][0]['path']}" class="img-rounded">
+                            </if>
+                        </a>
+                    <else/>
+                        <a class="card-cover" href="{:U('Photo/photolist', 'albumId='.$album['id'])}" target="_blank">
+                            <if condition="($album['photos']|count) eq 0">
+                                <img width="310" height="207" style="" src="/Public/img/photo.svg" class="img-rounded">
+                                <else/>
+                                <img width="310" height="207" style="" src="{$album['photos'][0]['path']}" class="img-rounded">
+                            </if>
+                        </a>
+                    </if>
+                    <!--album cover end-->
+
                     <div class="card-info">
+                        <!--user head photo-->
                         <div class="person-avatar">
                             <if condition="$userinfo['head'] eq null">
                                 <img src="/Public/img/photo.svg" class="img-circle" style="width: 30px; height: 30px;">
@@ -45,12 +57,17 @@
                                 <img src="{$userinfo['head']}" class="img-circle" style="width: 30px; height: 30px;">
                             </if>
                         </div>
+                        <!--user head photo end-->
+
+                        <!--operation bar-->
                         <div class="card-detail">
                             <strong>{$album['name']}</strong>
                             <p class="card-detail-time">{$album['time']|strtotime|date="Y-m-d",###}&nbsp;[{$album['photos']|count}图]</p>
                             <a href="{:U('Album/edit', 'albumId='.$album['id'])}" title="编辑"><em><span class="glyphicon glyphicon-edit"></span>编辑</em></a>
                             <a href="{:U('Album/delete', 'albumId='.$album['id'])}" title="删除"><em><span class="glyphicon glyphicon-remove"></span></em>删除</a>
                         </div>
+                        <!--operation bar end-->
+
                     </div>
                     <!-- <div class="card-tool">
                         <a href="#" title="编辑"><em><span class="glyphicon glyphicon-edit"></span>编辑</em></a>
