--- a/Tpl/User/login.html
+++ b/Tpl/User/login.html
@@ -1,121 +1,182 @@
 <!DOCTYPE html>
-<html lang="zh-cn">
+<html>
+
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <meta charset="UTF-8">
+
     <title>抱石</title>
 
-    <!-- Bootstrap -->
-    <load href='/Public/bootstrap-3.2.0/css/bootstrap.css' />
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <load href='/Public/jquery-1.11.1.min.js' />
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <load href='/Public/bootstrap-3.2.0/js/bootstrap.js' />
+    <style>
+        /*@import url(http://fonts.googleapis.com/css?family=Exo:100,200,400);*/
+        /*@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:700,400,300);*/
 
-    <load href='/Public/css/min.css' />
+        body{
+            margin: 0;
+            padding: 0;
+            background: #fff;
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-    <script src="http://cdn.bootcss.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-    <script src="http://cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
+            color: #fff;
+            font-family: Arial;
+            font-size: 12px;
+        }
+
+        .body{
+            position: absolute;
+            top: -20px;
+            left: -20px;
+            right: -40px;
+            bottom: -40px;
+            width: auto;
+            height: auto;
+            background-image: url(/Public/img/bg.jpg);
+            background-size: cover;
+            -webkit-filter: blur(5px);
+            z-index: 0;
+        }
+
+        .grad{
+            position: absolute;
+            top: -20px;
+            left: -20px;
+            right: -40px;
+            bottom: -40px;
+            width: auto;
+            height: auto;
+            background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0)), color-stop(100%,rgba(0,0,0,0.65))); /* Chrome,Safari4+ */
+            z-index: 1;
+            opacity: 0.7;
+        }
+
+        .header{
+            position: absolute;
+            top: calc(50% - 35px);
+            left: calc(50% - 380px);
+            z-index: 2;
+        }
+
+        .header div{
+            float: left;
+            color: #fff;
+            font-family: 'Exo', sans-serif;
+            font-size: 35px;
+            font-weight: 200;
+        }
+
+        .header div span{
+            color: #5379fa !important;
+        }
+
+        .login{
+            position: absolute;
+            top: calc(50% - 75px);
+            left: calc(50% - 50px);
+            height: 150px;
+            width: 350px;
+            padding: 10px;
+            z-index: 2;
+        }
+
+        .login input[type=text]{
+            width: 250px;
+            height: 30px;
+            background: transparent;
+            border: 1px solid rgba(255,255,255,0.6);
+            border-radius: 2px;
+            color: #fff;
+            font-family: 'Exo', sans-serif;
+            font-size: 16px;
+            font-weight: 400;
+            padding: 4px;
+        }
+
+        .login input[type=password]{
+            width: 250px;
+            height: 30px;
+            background: transparent;
+            border: 1px solid rgba(255,255,255,0.6);
+            border-radius: 2px;
+            color: #fff;
+            font-family: 'Exo', sans-serif;
+            font-size: 16px;
+            font-weight: 400;
+            padding: 4px;
+            margin-top: 10px;
+        }
+
+        .login input[type=submit]{
+            width: 260px;
+            height: 35px;
+            background: #fff;
+            border: 1px solid #fff;
+            cursor: pointer;
+            border-radius: 2px;
+            color: #a18d6c;
+            font-family: 'Exo', sans-serif;
+            font-size: 16px;
+            font-weight: 400;
+            padding: 6px;
+            margin-top: 10px;
+        }
+
+        .login input[type=submit]:hover{
+            opacity: 0.8;
+        }
+
+        .login input[type=submit]:active{
+            opacity: 0.6;
+        }
+
+        .login input[type=text]:focus{
+            outline: none;
+            border: 1px solid rgba(255,255,255,0.9);
+        }
+
+        .login input[type=password]:focus{
+            outline: none;
+            border: 1px solid rgba(255,255,255,0.9);
+        }
+
+        .login input[type=submit]:focus{
+            outline: none;
+        }
+
+        ::-webkit-input-placeholder{
+            color: rgba(255,255,255,0.6);
+        }
+
+        ::-moz-input-placeholder{
+            color: rgba(255,255,255,0.6);
+        }
+    </style>
+
+    <!--<script src="js/prefixfree.min.js"></script>-->
+
 </head>
+
 <body>
 
-<nav class="navbar" role="navigation">
-    <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-
-            <a href="https://laracasts.com/" class="navbar-brand logo">
-                抱石
-            </a>
-        </div> <!-- navbar-header -->
-
-        <div class="collapse navbar-collapse navbar-ex1-collapse">
-            <ul class="nav navbar-nav navbar-right">
-                <li class="active divided-list"><a href="register" class="navbar-link">注册</a></li>
-                <li class=""><a href="###" class="navbar-link">登陆</a></li>
-
-            </ul>
-        </div> <!-- collapse -->
-    </div> <!-- container -->
-</nav>
-<!-- navbar end -->
-
-<!-- signup banner begin -->
-<div id="signup-banner" class="banner hide-from-mobile">
-    <div class="container">
-        <h2 class="wow fadeInDown signup-welcome animated" style="visibility: visible; -webkit-animation: fadeInDown;">
-            一个有故事的影集<br>
-        </h2>
-    </div>
+<div class="body"></div>
+<div class="grad"></div>
+<div class="header">
+    <div>抱石<small><span>一个有故事的影集</span></small></div>
 </div>
-<!-- signup banner end -->
+<br>
+<div class="login">
+    <form method="POST" action="__URL__/login" accept-charset="UTF-8" >
+        <input name="_token" type="hidden" value="xtDRSMOk3h5vSjcIidZFhWjUYyBpVKYhjN6x80PD">
+        <input id="username" required="1" name="username" placeholder="用户名" type="text">
+        <input id="password" name="password" type="password" placeholder="密码" required="">
+        <input value="登陆" type="submit" name="create-account">
 
-<div class="container wrap">
-    <div class="row">
-        <div class="col-md-12 content">
-            <div class="row" id="signup-form">
-                <form method="POST" action="__URL__/login" accept-charset="UTF-8" class="col-md-8 col-md-offset-2" id="billing-form">
-                    <input name="_token" type="hidden" value="xtDRSMOk3h5vSjcIidZFhWjUYyBpVKYhjN6x80PD">
-                    <div class="panel panel-default registration">
-                        <div class="panel-heading">
-                            <div class="row">
-                                <h1 class="panel-title col-lg-7 col-md-5 col-sm-7">
-                                    登陆
-                                </h1>
-                            </div>
-                        </div>
-
-                        <div class="panel-body">
-                            <fieldset>
-                                <h3 class="signup-subheading">个人信息:</h3>
-
-                                <!-- Text input-->
-                                <div class="form-group row">
-                                    <label class="col-md-2 control-label" for="username">用户名</label>
-
-                                    <div class="col-md-8">
-                                        <input class="form-control input-md" id="username" required="1" name="username" type="text">
-                                    </div>
-                                </div>
-                                <!-- Text input-->
-                                <div class="form-group row">
-                                    <label class="col-md-2 control-label" for="password">密码</label>
-
-                                    <div class="col-md-8">
-                                        <input id="password" name="password" type="password" placeholder="" class="form-control input-md" required="">
-                                    </div>
-                                </div>
-
-                            </fieldset>
-                            <div class="pull-right sign-up-buttons">
-                                <button class="btn btn-primary" type="submit" name="create-account">
-                                    确认登陆
-                                </button>
-                            </div>
-                        </div>
-
-                    </div>
-                </form>
-            </div>
-        </div>
-    </div>
+        <!--<input type="text" placeholder="username" name="user"><br>-->
+        <!--<input type="password" placeholder="password" name="password"><br>-->
+        <!--<input type="button" value="Login">-->
+    </form>
 </div>
-<footer id="footer" class="wrap">
-    <div class="container">
-        中国地质调查局 版权所有 <br/>
-        Copyright © 2014-2020, All Rights Reserved
-    </div>
-</footer>
+
+<script src='/Public/jquery-1.11.1.min.js'></script>
+
 </body>
-</html>
 
+</html>
