--- a/Tpl/Album/create.html
+++ b/Tpl/Album/create.html
@@ -1,4 +1,6 @@
 <load href='/Public/css/album-create.css' />
+<load href='/Public/bootstrap-tagsinput/bootstrap-tagsinput.css' />
+<load href='/Public/bootstrap-tagsinput/bootstrap-tagsinput.js' />
 
 <div class="container create-wrapper">
     <div class="page-header">
@@ -17,20 +19,6 @@
             <div class="col-sm-4"></div>
         </div>
 
-
-		<div class="form-group">
-            <div class="col-sm-5"></div>
-			<div class="col-sm-2">
-				<input type="text" class="form-control" id="albumTheme" name="albumTheme" placeholder="请输入主题" required maxlength="10">
-                <p class="word-count">
-                    <span id="j-words-count">10字</span>
-                   <!--  <span>/6</span> -->
-                </p>
-			</div>
-            <div class="col-sm-5"></div>
-		</div>
-
-
 		<div class="form-group">
             <div class="col-sm-3"></div>
 			<div class="col-sm-6">
@@ -43,11 +31,23 @@
             <div class="col-sm-3"></div>
 		</div>
 
+        <div class="form-group">
+            <div class="col-sm-3"></div>
+            <div class="col-sm-6">
+                <input type="text" class="form-control" id="albumTheme" name="albumTheme" placeholder="请输入主题" required maxlength="20" data-role="tagsinput">
+                <!--<p class="word-count">-->
+                    <!--<span id="j-words-count">5个词</span>-->
+                <!--</p>-->
+            </div>
+            <div class="col-sm-5"></div>
+        </div>
+
 		<div class="form-group">
 			<div class="col-sm-12">
 				<button type="submit" class="btn btn-default">创建影集</button>
 			</div>
 		</div>
+
 	</form>
 </div>
 
