--- a/Tpl/Album/show.html
+++ b/Tpl/Album/show.html
@@ -1,17 +1,23 @@
+<load href='/Public/css/album-show.css' />
 
 <div class="container">
 
     <div class="page-header">
-        <h1>{$album.name}</h1>
-        <p>
+        <h2>
+            {$album.name}
             <foreach name="tags" item="tag">
                 <span class="label label-primary">{$tag}</span>
             </foreach>
-        </p>
-        <p><strong>影集描述：</strong>{$album.description}</p>
+        </h2>
+        <!--<p>
+            <foreach name="tags" item="tag">
+                <span class="label label-primary">{$tag}</span>
+            </foreach>
+        </p>-->
+        <p>{$album.description}</p>
     </div>
 
-        <foreach name="photos" item="photo">
+        <volist name="photos" id="photo">
             <div class="col-xs-6 col-md-6">
                 <div class="thumbnail" pid="{$photo.id}">
                     <a href="{:U('Photo/view', 'albumId='.$albumId.'&pid='.$photo['id'])}" target="_blank">
@@ -22,18 +28,23 @@
                             <volist name="photo.tags" id="tag">
                                 <span class="label label-info img-tag">{$tag.name}</span>
                             </volist>
+
+                            {$photo.take_time}
                         </p>
                         <p>
-                            描述：{$photo.description}
+                            <span class="number-body">
+
+                                    <strong class="number-index">{$key+1}</strong>/{$photos|count}
+
+                            </span>
+                            <span>
+                                {$photo.description}
+
+                            </span>
                         </p>
-                        <p>
-                            拍摄时间：{$photo.take_time}
-                        </p>
-                        <p>
-                            上传时间：{$photo.time}
-                        </p>
+
                     </div>
                 </div>
             </div>
-        </foreach>
+        </volist>
 </div>
