--- a/Tpl/Album/uploadphoto.html
+++ b/Tpl/Album/uploadphoto.html
@@ -68,17 +68,21 @@
             'itemTemplate': '<div class="photo-block" id="${fileID}">\
                 <img src="/Public/img/photo.svg" pid="" class="img-rounded" style="height: 110px; width: 110px;">\
                 </div>',
-            // 'onSelect': function(input){
-            //     // if (input.files && input.files[0]) {
-            //         // var reader = new FileReader();
-                    
-            //         // reader.onload = function (e) {
-            //         //     $('#blah').attr('src', e.target.result);
-            //         // }
-                    
-            //         // reader.readAsDataURL(input);
-            //     // }
-            // },
+//            'onSelect': function(input){
+//                alert(input);
+//                 // if (input.files && input.files[0]) {
+//                     // var reader = new FileReader();
+//
+//                     // reader.onload = function (e) {
+//                     //     $('#blah').attr('src', e.target.result);
+//                     // }
+//
+//                     // reader.readAsDataURL(input);
+//                 // }
+//            },
+//            'onUploadStart' : function(file) {
+//                alert('Starting to upload ' + file.name);
+//            },
 			'onUploadSuccess' : function(file, data, response) {
                 if(response == true){
                     var fileId = file.id;
